[package]
name = "repcon"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
ignore = "0.4"
tempfile = "3"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "repcon"
path = "src/main.rs"