[package]
name = "repcon"
version = "0.1.0"
edition = "2021"
description = "A Rust tool for condensing repository files for OpenAI's Assistants API usage"
keywords = ["openai", "retrieval", "compression", "cli"]
license = "MIT"
repository = "https://github.com/edo1z/repcon"
authors = ["edo1z <endo.yuta@logicky.com>"]
homepage = ""
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
ignore = "0.4"
tempfile = "3"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "repcon"
path = "src/main.rs"